# ai-labor-impact

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  LINKEDIN.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-bayesian.txt  requirements-dev.txt  requirements-tracking.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: dashboard.py
artifacts/swe_bench_baseline/: fit.pkl  run.json
data/: insights_cache.json
notebooks/: 02_ai_progress_curve.ipynb  03_employment_impact.ipynb  04_bayesian_sector_risk.ipynb  05_temporal_validation.ipynb
src/: __init__.py  config.py  persistence.py
src/data/: __init__.py  ai_benchmarks.py  metaculus.py  world_bank.py
src/insights/: __init__.py  generator.py
src/models/: __init__.py  bayesian.py  benchmark_curve.py  scenarios.py  unemployment.py
src/tracking/: __init__.py  mlflow_tracker.py
src/validation/: __init__.py  temporal_cv.py
src/viz/: __init__.py  plots.py
tests/: test_models.py
