[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-labor-impact"
version = "0.1.0"
description = "Data-driven analysis of AI capability progression and global employment displacement"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Dragos" }]
keywords = ["AI", "labor economics", "data science", "forecasting", "Monte Carlo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Repository = "https://github.com/dragoscalin33/ai-labor-impact"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 95
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
# Tests don't need return-type / arg-type annotations — they're noise there.
"tests/**/*.py" = ["ANN001", "ANN201", "ANN202", "ANN204"]
# Notebooks are interactive — relax annotation rules.
"notebooks/**/*.py" = ["ANN001", "ANN201", "ANN202", "ANN204"]
# Mathematical notation (L, k, x0) is idiomatic for sigmoid/Gompertz params.
"src/models/benchmark_curve.py" = ["N803", "N806"]
"src/models/scenarios.py" = ["N803", "N806", "N815"]
# Same — temporal CV / Bayesian modules also use math notation.
"src/validation/**/*.py" = ["N803", "N806"]
"src/models/bayesian.py" = ["N803", "N806"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"
